style.css
body{
background-color: #ADD8E6;
  background-size: cover; 
  front-family: Arial;
  color: white;
}
ul{
  margin:0px;
    padding:0px;
  list-style: none;
}
ul li {
	float: left;
	width: 200px;
	height: 40px;
	background-color: black;
	opacity: .8;
	line-height: 50px;
	text-align: center;
	front-size: 30px
	}
	ul li a {
		text-decoration: none;
		color: white;
		display: block;
	}
	ul li a:hover{
		background-color: pink;
	}
	ul li ul li {
		display: none;
	}
	ul li:hover ul li{
		display:block;
	}
	p{
		color: black;
	}
	p1{
	float: left;
	front-family :Arial;
	text-decoration: none;
	color:gray;
	}
	/*
	slider {
		display: block;
		width: 100%
		height: 100%
		background-color: #1f1f1f;
		overflow: hidden;
		position: absolute;
	}
	
	slider > *{
		position: absolute;
		display: block;
		width: 100%
		height: 100%;
		background: #1f1f1f;
		animation: slide 5s infinite;
		overflow: hidden;
		
	}
	slide:nth-child(1){
		left: 0%;
		animation-delay: -1s;
		background-image: url(School.jpg);
		background-size: cover;
		background-position: center;
	}
	slide:nth-child(2){
		left: 0%;
		animation-delay: 2s;
		background-image: url(School.jpg);
		background-size: cover;
		background-position: center;
	}
	slide:nth-child(3){
		left: 0%;
		animation-delay: 5s;
		background-image: url("School.jpg");
		background-size: cover;
		background-position: center;
	}
	slide:nth-child(4){
		left: 0%;
		animation-delay: 8s;
		background-image: url(School.jpg);
		background-size: cover;
		background-position: center;
	}
	slide p{
		font
	}

